API lấy danh sách tin nhắn cá nhân/nhóm
